Fix event text overlapping footer

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -56,13 +56,23 @@
 
 .square50 {
   width:50vw !important; 
-  height:48vw !important;
+  height:47vw !important;
   margin-right: 30px !important;
+}
+
+.width50 {
+  width:50vw !important; 
+  /*margin-right: 30px !important;*/
 }
 
 .square80 {
   width:80vw !important; 
   height:80vw !important;
+  margin-bottom: 30px !important;
+}
+
+.width80 {
+  width:80vw !important; 
   margin-bottom: 30px !important;
 }
 
